[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Icon/stats/Attack.png" type="Texture" id=1]
[ext_resource path="res://Assets/Icon/stats/LP.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Resource/FFBasicFont.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Icon/stats/Defense.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icon/stats/Accuracy.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icon/stats/SupportEffects.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Resource/FFStatNumbers.tres" type="Theme" id=7]
[ext_resource path="res://Assets/Icon/stats/Evasion.png" type="Texture" id=8]
[ext_resource path="res://Scenes/VivoView/VivoOverview/VivoOverview.gd" type="Script" id=9]
[ext_resource path="res://Scenes/VivoView/RadialStatIndicator/RadialStatIndicator.tscn" type="PackedScene" id=10]

[node name="VivoOverview" type="Node2D"]
script = ExtResource( 9 )

[node name="Stats" type="Node2D" parent="."]

[node name="lp" type="Sprite" parent="Stats"]
texture = ExtResource( 2 )
centered = false

[node name="Tag" type="Label" parent="Stats/lp"]
margin_left = 17.0
margin_top = -1.0
margin_right = 41.0
margin_bottom = 13.0
theme = ExtResource( 7 )
text = "---"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack" type="Sprite" parent="Stats"]
position = Vector2( 0, 18 )
texture = ExtResource( 1 )
centered = false

[node name="Tag" type="Label" parent="Stats/attack"]
margin_left = 17.0
margin_right = 41.0
margin_bottom = 14.0
theme = ExtResource( 7 )
text = "---"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defense" type="Sprite" parent="Stats"]
position = Vector2( 55, 18 )
texture = ExtResource( 4 )
centered = false

[node name="Tag" type="Label" parent="Stats/defense"]
margin_left = 17.0
margin_right = 41.0
margin_bottom = 14.0
theme = ExtResource( 7 )
text = "---"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="accuracy" type="Sprite" parent="Stats"]
position = Vector2( 0, 40 )
texture = ExtResource( 5 )
centered = false

[node name="Tag" type="Label" parent="Stats/accuracy"]
margin_left = 17.0
margin_right = 41.0
margin_bottom = 14.0
theme = ExtResource( 7 )
text = "---"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="evasion" type="Sprite" parent="Stats"]
position = Vector2( 55, 40 )
texture = ExtResource( 8 )
centered = false

[node name="Tag" type="Label" parent="Stats/evasion"]
margin_left = 17.0
margin_right = 41.0
margin_bottom = 14.0
theme = ExtResource( 7 )
text = "---"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Art" type="Sprite" parent="."]
position = Vector2( 172, 35 )
scale = Vector2( 0.3, 0.3 )

[node name="RadialStatIndicator" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 165, 33 )
scale = Vector2( 0.5, 0.5 )

[node name="Description" type="RichTextLabel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 80.0
margin_right = 222.0
margin_bottom = 141.0
mouse_filter = 2
theme = ExtResource( 3 )
text = "Description"

[node name="SupportEffectsType" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 58.0
margin_top = 154.0
margin_right = 211.0
margin_bottom = 168.0
theme = ExtResource( 3 )
text = "Applied to AZ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SupportEffectsIcon" type="Sprite" parent="."]
position = Vector2( 2, 142 )
texture = ExtResource( 6 )
centered = false

[node name="SupportEffects" type="Node2D" parent="."]
position = Vector2( 0, 174 )

[node name="sattack" type="Sprite" parent="SupportEffects"]
texture = ExtResource( 1 )
centered = false

[node name="Tag" type="Label" parent="SupportEffects/sattack"]
margin_left = 17.0
margin_right = 48.0
margin_bottom = 14.0
theme = ExtResource( 7 )
text = "---"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sdefense" type="Sprite" parent="SupportEffects"]
position = Vector2( 55, 0 )
texture = ExtResource( 4 )
centered = false

[node name="Tag" type="Label" parent="SupportEffects/sdefense"]
margin_left = 17.0
margin_right = 48.0
margin_bottom = 14.0
theme = ExtResource( 7 )
text = "---"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saccuracy" type="Sprite" parent="SupportEffects"]
position = Vector2( 110, 0 )
texture = ExtResource( 5 )
centered = false

[node name="Tag" type="Label" parent="SupportEffects/saccuracy"]
margin_left = 17.0
margin_right = 48.0
margin_bottom = 14.0
theme = ExtResource( 7 )
text = "---"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sevasion" type="Sprite" parent="SupportEffects"]
position = Vector2( 165, 0 )
texture = ExtResource( 8 )
centered = false

[node name="Tag" type="Label" parent="SupportEffects/sevasion"]
margin_left = 17.0
margin_right = 48.0
margin_bottom = 14.0
theme = ExtResource( 7 )
text = "---"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
